--- a/apps/cli/BUILD.bazel
+++ b/apps/cli/BUILD.bazel
@@ -1,8 +1,10 @@
 load("@rules_python//python:py_binary.bzl", "py_binary")
+load("@pypi//:requirements.bzl", "requirement")
 
 py_binary(
   name = "cli",
   srcs = ["src/cli.py"],
   deps = [
+      requirement("typer"),
   ]
 )
