--- a/apps/gui/BUILD.bazel
+++ b/apps/gui/BUILD.bazel
@@ -1,8 +1,12 @@
 load("@rules_python//python:py_binary.bzl", "py_binary")
+load("@pypi//:requirements.bzl", "requirement")
 
 py_binary(
   name = "gui",
   srcs = ["src/gui.py"],
   deps = [
+    requirement("numpy"),
+    requirement("nicegui"),
+    requirement("pywebview"),
   ]
 )
