--- a/apps/gui/BUILD.bazel
+++ b/apps/gui/BUILD.bazel
@@ -8,5 +8,6 @@ py_binary(
     requirement("numpy"),
     requirement("nicegui"),
     requirement("pywebview"),
+    "//libs/compressor:compressor",
   ]
 )
