--- a/libs/compressor/BUILD.bazel
+++ b/libs/compressor/BUILD.bazel
@@ -1,8 +1,12 @@
 load("@rules_python//python:defs.bzl", "py_library")
+load("@pypi//:requirements.bzl", "requirement")
 
 py_library(
     name = "compressor",
     srcs = glob(["src/compressor/**/*.py"]),
     imports = ["src"],
     visibility = ["//visibility:public"],
+    deps = [
+        requirement("numpy"),
+    ],
 )
